--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "dev": "bun --watch index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "^1.2.5",
+    "drizzle-kit": "^0.30.5"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.4.3",
+    "better-sqlite3": "^11.9.0",
+    "drizzle-orm": "^0.39.3",
     "hono": "^4.7.2",
+    "pg": "^8.13.3",
+    "postgres": "^3.4.5",
     "zod": "^3.24.2"
   }
 }
