--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "dev": "bun --watch index.ts"
   },
   "devDependencies": {
-    "@types/bun": "^1.2.5",
-    "drizzle-kit": "^0.30.5"
+    "@eslint/js": "^9.23.0",
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.30.5",
+    "eslint": "^9.23.0",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.28.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.4.3",
+    "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
     "better-sqlite3": "^11.9.0",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
