--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
   "name": "mood_tracker",
-  "module": "index.ts",
   "type": "module",
+  "module": "index.ts",
   "scripts": {
     "start": "bun index.ts",
-    "dev": "bun --watch index.ts"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.23.0",
-    "@types/bun": "latest",
-    "drizzle-kit": "^0.30.5",
-    "eslint": "^9.23.0",
-    "globals": "^16.0.0",
-    "typescript-eslint": "^8.28.0"
+    "dev": "bun --watch index.ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "prepare": "husky"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -24,8 +19,25 @@
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
     "hono": "^4.7.2",
+    "lint-staged": "^15.5.0",
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
     "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^4.11.0",
+    "@eslint/js": "^9.23.0",
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.30.5",
+    "eslint": "^9.23.0",
+    "eslint-plugin-format": "^1.0.1",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "typescript-eslint": "^8.28.0"
+  },
+
+  "lint-staged": {
+    "*": "bun lint"
   }
+
 }
