--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "better-sqlite3": "^11.9.0",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
+    "eslint-plugin-yml": "^1.17.0",
     "hono": "^4.7.2",
     "lint-staged": "^15.5.0",
     "pg": "^8.13.3",
@@ -35,9 +36,7 @@
     "husky": "^9.1.7",
     "typescript-eslint": "^8.28.0"
   },
-
   "lint-staged": {
     "*": "bun lint"
   }
-
 }
