--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
+    "@tanstack/vue-form": "^1.1.3",
     "@tanstack/vue-query": "^5.70.0",
+    "lucide-vue-next": "^0.485.0",
     "tailgrids": "^2.3.0",
     "tailwindcss": "^4.0.17",
     "vue": "^3.5.13",
