feat: enable strict type checking in TypeScript configuration

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -10,7 +10,8 @@
       "@backend/*": [
         "../backend/*"
       ]
-    }
+    },
+    "strict": true
   },
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "../backend/*"],
   "exclude": ["src/**/__tests__/*"]
