--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "better-sqlite3": "^11.9.0",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
+    "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-yml": "^1.17.0",
     "hono": "^4.7.2",
     "lint-staged": "^15.5.0",
