--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,14 @@
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/vue-form": "^1.1.3",
     "@tanstack/vue-query": "^5.70.0",
+    "date-fns": "^4.1.0",
     "lucide-vue-next": "^0.485.0",
+    "moment-timezone": "^0.5.48",
     "tailgrids": "^2.3.0",
     "tailwindcss": "^4.0.17",
     "vue": "^3.5.13",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vue-simple-calendar": "^7.2.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
