--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "bun --watch backend/index.ts",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "seed:db": "bun backend/seed.ts"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -17,6 +18,7 @@
     "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
     "better-sqlite3": "^11.9.0",
     "drizzle-orm": "^0.39.3",
+    "drizzle-seed": "^0.3.1",
     "drizzle-zod": "^0.7.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-yml": "^1.17.0",
