--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/vue3": "^6.1.17",
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/vue-form": "^1.1.3",
     "@tanstack/vue-query": "^5.70.0",
