--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^4.11.0",
     "@eslint/js": "^9.23.0",
+    "@flydotio/dockerfile": "^0.7.10",
     "@types/bun": "latest",
     "drizzle-kit": "^0.30.5",
     "eslint": "^9.23.0",
