--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "module": "index.ts",
   "scripts": {
     "start": "bun backend/index.ts",
-    "dev": "bun --watch backend/index.ts",
+    "dev": "NODE_ENV=development bun --watch backend/index.ts ",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "prepare": "husky",
@@ -16,8 +16,10 @@
   "dependencies": {
     "@hono/zod-validator": "^0.4.3",
     "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
+    "@neondatabase/serverless": "^1.0.0",
     "better-sqlite3": "^11.9.0",
-    "drizzle-orm": "^0.39.3",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.41.0",
     "drizzle-seed": "^0.3.1",
     "drizzle-zod": "^0.7.0",
     "eslint-plugin-drizzle": "^0.2.3",
@@ -33,11 +35,12 @@
     "@eslint/js": "^9.23.0",
     "@flydotio/dockerfile": "^0.7.10",
     "@types/bun": "latest",
-    "drizzle-kit": "^0.30.5",
+    "drizzle-kit": "^0.30.6",
     "eslint": "^9.23.0",
     "eslint-plugin-format": "^1.0.1",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
+    "tsx": "^4.19.3",
     "typescript-eslint": "^8.28.0"
   },
   "lint-staged": {
