--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "bunx --bun vite",
+    "dev": "bunx --bun vite --mode development",
     "build": "bunx --bun vite build",
     "preview": "vite preview",
     "build-only": "vite build",
