--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^4.1.0",
     "lucide-vue-next": "^0.485.0",
     "moment-timezone": "^0.5.48",
+    "pinia": "^3.0.2",
     "tailgrids": "^2.3.0",
     "tailwindcss": "^4.0.17",
     "vue": "^3.5.13",
