--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
     "@neondatabase/serverless": "^1.0.0",
     "better-sqlite3": "^11.9.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
     "drizzle-seed": "^0.3.1",
