--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hono/zod-validator": "^0.4.3",
     "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
     "@neondatabase/serverless": "^1.0.0",
+    "@types/luxon": "^3.6.2",
     "better-sqlite3": "^11.9.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
@@ -28,6 +29,8 @@
     "eslint-plugin-yml": "^1.17.0",
     "hono": "^4.7.2",
     "lint-staged": "^15.5.0",
+    "luxon": "^3.6.1",
+    "moment": "^2.30.1",
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
     "zod": "^3.24.2"
