feat: add internationalization support with vue-i18n and locale files

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -13,6 +13,6 @@
     },
     "strict": true
   },
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "../backend/*"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "../backend/*", "locales"],
   "exclude": ["src/**/__tests__/*"]
 }
