--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,12 @@
     "tailgrids": "^2.3.0",
     "tailwindcss": "^4.0.17",
     "vue": "^3.5.13",
+    "vue-i18n": "11",
     "vue-router": "4",
     "vue-simple-calendar": "^7.2.1"
   },
   "devDependencies": {
+    "@intlify/unplugin-vue-i18n": "^6.0.8",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
